--- a/css/styles.css
+++ b/css/styles.css
@@ -78,13 +78,27 @@ body {
     outline: none;
 }
 
+#logout-form-submit {
+    width: 100%;
+    padding: 7px;
+    margin-top: 15px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    background-color: #3a3a3a;
+    cursor: pointer;
+    outline: none;
+    opacity: 0;
+}
+
 .login-form-field::placeholder {
     color: #3a3a3a;
     align-content: center;
-  }
+}
 
   .login-form-field {
     border: 2px solid #3a3a3a;
     border-radius: 3px;
     outline: none;
-  }
+}
