Lagt i JS så att det framträder en knapp 'Logga ut' när man lyckats logga in. Lagt till div med id fast med tomt innehåll i Html:en och stylat knappen i css  med id:et som den får då den skapas i  JS.

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ body {
     outline: none;
 }
 
-#logout-form-submit {
+#my-id {
     width: 100%;
     padding: 7px;
     margin-top: 15px;
@@ -89,8 +89,7 @@ body {
     background-color: #3a3a3a;
     cursor: pointer;
     outline: none;
-    opacity: 0;
-}
+  }
 
 .login-form-field::placeholder {
     color: #3a3a3a;
