--- a/css/styles.css
+++ b/css/styles.css
@@ -1,105 +1,111 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .content {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 800px;
-    background-color: blueviolet;
-    justify-items: center;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 800px;
+  background-color: blueviolet;
+  justify-items: center;
+  align-items: center;
 }
 
 .main{
-    display: flex;
-    width: 60%;
-    height: 500px;
-    background-color: aqua;
+  display: flex;
+  width: 60%;
+  height: 500px;
+  background-color: aqua;
 }
 
 .side{
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    height: 300px;
-    padding: 5px;
-    background-color: #fff;
-    margin: 10px;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  height: 300px;
+  padding: 5px;
+  background-color: #fff;
+  margin: 10px;
+  align-items: center;
 }
 
-#login-header {
-    display: flex;
-    text-align: center;
-    margin:0;
+#loginHeader {
+  display: flex;
+  text-align: center;
+  margin:0;
+}
+
+#login-header-2 {
+  display: flex;
+  height: 30px;
+  padding: 10px;
+  background-color: #e58f8f;
 }
 
 #login-error-msg-holder {
-    margin-top: 20px;
-    width: 100%;
-    height: 25%;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-  }
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  
+  justify-content: center;
+  align-items: center;
+}
 
 #login-error-msg {
-    width: 50%;
-    text-align: center;
-    margin: 0;
-    padding: 5px;
-    font-size: 12px;
-    font-weight: bold;
-    color: #8a0000;
-    border: 1px solid #8a0000;
-    background-color: #e58f8f;
-    opacity: 0;
+  width: 150px;
+  text-align: center;
+  margin: 0;
+  padding: 5px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #8a0000;
+  border: 1px solid #8a0000;
+  background-color: #e58f8f;
+  opacity: 0;
 }
 
 #error-msg-second-line {
-    display: block;
-  }
-
-  #login-form {
-    justify-items: center;
-    align-items: center;
+  display: block;
   }
 
 #login-form-submit {
-    width: 100%;
-    padding: 7px;
-    margin-top: 15px;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    font-weight: bold;
-    background-color: #3a3a3a;
-    cursor: pointer;
-    outline: none;
+  width: 100%;
+  padding: 7px;
+  margin-top: 15px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  background-color: #3a3a3a;
+  cursor: pointer;
+  outline: none;
 }
 
 #my-id {
-    width: 100%;
-    padding: 7px;
-    margin-top: 15px;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    font-weight: bold;
-    background-color: #3a3a3a;
-    cursor: pointer;
-    outline: none;
+  width: 100%;
+  padding: 7px;
+  margin-top: 15px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  background-color: #3a3a3a;
+  cursor: pointer;
+  outline: none;
   }
 
 .login-form-field::placeholder {
-    color: #3a3a3a;
-    align-content: center;
+  display: flex;
+  color: #3a3a3a;
+  align-content: center;
 }
 
-  .login-form-field {
-    border: 2px solid #3a3a3a;
-    border-radius: 3px;
-    outline: none;
+.login-form-field {
+  border: 2px solid #3a3a3a;
+  border-radius: 3px;
+  outline: none;
 }
+
+
