--- a/css/styles.css
+++ b/css/styles.css
@@ -7,22 +7,36 @@ body {
   flex-direction: row;
   width: 100%;
   height: 800px;
-  background-color: blueviolet;
-  justify-items: center;
+  
+  background-color: #fff;
+  justify-content: center;
   align-items: center;
+  background-image: url("../images/pool.jpg");
+  background-size:cover;
+  background-repeat: no-repeat;
+}
+
+#header {
+  height: 100px;
+  width: 100%;
 }
 
 .main{
   display: flex;
   width: 60%;
   height: 500px;
-  background-color: aqua;
+  border-radius: 5px;
+  background-color: #fff;
+  opacity: 0.9;
+  margin-left: 40px;
 }
 
 .side{
   display: flex;
   flex-direction: column;
-  width: 40%;
+  border: 1px solid #000;
+  border-radius: 5px;
+  width: 30%;
   height: 300px;
   padding: 5px;
   background-color: #fff;
@@ -30,13 +44,13 @@ body {
   align-items: center;
 }
 
-#loginHeader {
+#title {
   display: flex;
   text-align: center;
   margin:0;
 }
 
-#header {
+#loginMsg {
   display: flex;
   justify-self: flex-start;
   margin-right: auto;
@@ -82,7 +96,7 @@ body {
 
 #error-msg-second-line {
   display: block;
-  }
+}
 
 #login-form-submit {
   width: 100%;
@@ -108,7 +122,7 @@ body {
   background-color: #3a3a3a;
   cursor: pointer;
   outline: none;
-  }
+}
 
 .login-form-field::placeholder {
   display: flex;
