--- a/css/styles.css
+++ b/css/styles.css
@@ -5,15 +5,15 @@ body {
 .content {
   display: flex;
   flex-direction: row;
-  width: 100%;
+  width: 99%;
   height: 800px;
-  
   background-color: #fff;
-  justify-content: center;
   align-items: center;
   background-image: url("../images/pool.jpg");
   background-size:cover;
   background-repeat: no-repeat;
+  padding: 5px;
+  justify-content:space-around;
 }
 
 #header {
@@ -21,14 +21,29 @@ body {
   width: 100%;
 }
 
+img {
+  height: 100px;
+}
+
 .main{
   display: flex;
+  flex-direction: column;
   width: 60%;
   height: 500px;
   border-radius: 5px;
   background-color: #fff;
   opacity: 0.9;
-  margin-left: 40px;
+  padding: 5px;
+  text-align: justify;
+}
+
+.main h2 {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.textBarMargin {
+  margin: 2px;
 }
 
 .side{
@@ -40,7 +55,6 @@ body {
   height: 300px;
   padding: 5px;
   background-color: #fff;
-  margin: 10px;
   align-items: center;
 }
 
@@ -84,7 +98,7 @@ body {
 #login-error-msg {
   width: 150px;
   text-align: center;
-  margin: 0;
+  margin-top: 20px;
   padding: 5px;
   font-size: 12px;
   font-weight: bold;
@@ -111,7 +125,7 @@ body {
   outline: none;
 }
 
-#my-id {
+#loggaUt {
   width: 100%;
   padding: 7px;
   margin-top: 15px;
