--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
   height: 800px;
   background-color: #fff;
   align-items: center;
-  background-image: url("../images/pool.jpg");
+  background-image: url(../images/pool.jpg);
   background-size:cover;
   background-repeat: no-repeat;
   padding: 5px;
